--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,8 +32,7 @@ body {
 }
 
 .panel {
-    padding: 0;
-    margin: 0 0 0 0;
+    padding: 0 12px;
     width: 70%;
     border-left: none;
     height: 300px;
